Updated for Sem-5 subjects

--- a/popup.html
+++ b/popup.html
@@ -9,6 +9,7 @@
     <title>MyClass Launcher</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+     <!--Link to font-awesome for icons etc..-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.3/css/all.css" integrity="undefined" crossorigin="anonymous">
     <!--Link to CSS-->
     <link rel="stylesheet" href="/styles.css">
@@ -17,7 +18,8 @@
 <body>
     <div class="modal-header">
         <h1 class="logo">
-            <img src="images/icon_150.png" alt="MyClass Launcher" class="logo-icon"> <br>MyClass Launcher <span class="version">(1.0.0)</span>
+            <a href="https://github.com/thefarazxr/MyClass_Launcher">
+            <img  src="images/icon_150.png" alt="MyClass Launcher" class="logo-icon"> <br>MyClass Launcher <span class="version">(2.0)</span></a>
         </h1>
     </div>
     <div class="modal-content">
@@ -25,46 +27,54 @@
     </div>
     <div class="modal-icons">
         <div class="flex-container">
-            <div class="flex java_set">
-                <a href="https://meet.google.com/ofo-fqpp-ygi" target="_blank">
-                    <i class="fab fa-java"></i>
-                    <p class="flex_description Java">JAVA Class</p>
+            <div class="flex softeng_set">
+                <a href="https://meet.google.com/aqn-jkxh-qos" target="_blank">
+                    <i class="fas fa-project-diagram"></i>
+                    <p class="flex_description Softeng">Soft. Eng.</p>
                 </a>
             </div>
-            <div class="flex co_set">
-                <a href="https://classroom.google.com/u/1/c/MzEzNjY4NzU4OTk4" target="_blank">
-                    <i class="fas fa-microchip"></i>
-                    <p class="flex_description CO">CO Class</p>
+            <div class="flex os_set">
+                <a href="https://meet.google.com/ija-fpgp-jep" target="_blank">
+                    <i class="fab fa-ubuntu"></i>
+                    <p class="flex_description OS">O.S Class</p>
                 </a>
             </div>
-            <div class="flex dbms_set">
-                <a href="https://meet.google.com/lookup/cuyn4lrizp" target="_blank">
-                    <i class="fas fa-database"></i>
-                    <p class="flex_description DBMS">DBMS Class</p>
+            <div class="flex alc_set">
+                <a href="https://meet.google.com/" target="_blank">
+                    <i class="fas fa-dot-circle"></i>
+                    <p class="flex_description ALC">ALC Class</p>
                 </a>
             </div>
-            <div class="flex m3_set">
-                <a href="https://meet.google.com/rfk-jmvo-kty" target="_blank">
-                    <i class="fas fa-square-root-alt"></i>
-                    <p class="flex_description M-3">M-3 Class</p>
+            <div class="flex ai_set">
+                <a href="https://meet.google.com/hso-fryk-ufc" target="_blank">
+                    <i class="fas fa-robot"></i>
+                    <p class="flex_description AI">A.I Class</p>
                 </a>
             </div>
-            <div class="flex ss_set">
-                <a href="https://meet.google.com/lookup/eilrjgsy5z" target="_blank">
-                    <i class="fas fa-wave-square"></i>
-                    <p class="flex_description SS">S.S Class</p>
+            <div class="flex wit_set">
+                <a href="https://meet.google.com/edo-erwo-nsg" target="_blank">
+                    <i class="fas fa-globe"></i>
+                    <p class="flex_description WIT">Web & IT</p>
                 </a>
             </div>
-            <div class="flex fa_set">
-                <a href="https://meet.google.com/lookup/dzycylxgvq" target="_blank">
-                    <i class="fas fa-file-invoice-dollar"></i>
-                    <p class="flex_description FA">F.A Class</p>
+            
+            <div class="flex data_set">
+                <a href="https://chat.whatsapp.com/G2Gm2ax0qrB5cDgSZUW624" target="_blank">
+                    <i class="fas fa-chart-bar"></i>
+                    <p class="flex_description DA">Data Analytics</p>
                 </a>
             </div>
-            <div class="flex etce_set">
-                <a href="https://meet.google.com/lookup/eiuvy7xnz2" target="_blank">
-                    <i class="fas fa-language"></i>
-                    <p class="flex_description ETCE">ETCE Class</p>
+            <div class="flex graph_set">
+                <a href="https://chat.whatsapp.com/FpTrLl08Up398OeTlUhdTA" target="_blank">
+                    <i class="fab fa-connectdevelop"></i>
+                    <p class="flex_description Graph">Graph Theory</p>
+                </a>
+            </div>
+
+            <div class="flex btc_set">
+                <a href="" target="_blank">
+                    <i class="fas fa-cubes"></i>
+                    <p class="flex_description btc">Block Chain</p>
                 </a>
             </div>
 
